--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
+
+
+body {
+  background-color: #282828;
+  width: 100%;
+}
+
+.container{
+  margin: auto;
   text-align: center;
+
+
+}
+.jumbotron{
+   background-color: #282828;
+   margin-bottom: 0;
+   padding-bottom: 0;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container-fluid{
+  margin-left: 0;
+  padding-left: 0;
+}
+.form-control{
+  height: 50px;
+  border-radius: 0;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-control.is-invalid
+{
+  border-color: #D02035;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.invalid-feedback
+{
   color: white;
+  display: inline;
+  float: right;
+  text-align: right;
+
+
 }
 
-.App-link {
-  color: #61dafb;
+select {
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+}
+  
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 65px;
+  color: white;
+  text-align: left;
+  margin-bottom: 0;
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 35px;
+  font-weight: bold;
+  color: white;
+  text-align: left;
+
 }
+
+p {
+  font-family: 'Merriweather', serif;
+  font-size: 20px;
+  color: white;
+  text-align: left;
+}
+
+hr {
+  border: 5px solid #D02035;
+  width: 27%;
+  margin-left:0;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+input {
+  font-family: 'Merriweather', serif;
+  font-size: 16px;
+  font-style: italic ;
+  color: #797979;
+  height: 30px;
+}
+
+
+
+.btn {
+
+  font-family: 'Merriweather', serif;
+  font-weight: bold;
+  font-size: 20px;
+  background-color: #D02035;
+  color: white;
+  width: 100%;
+  height: 50px;
+  margin-top: 20px;
+
+}
+.btn-group {
+  width: 100%;
+}
+
+.btn:hover {
+  background-color: #D02035;
+}
+
+select.holder{
+  background-color: #D02035;
+}
+
